test/corpus/bold.txt
==================
Bold tag
==================

This is a B{bold} text.

---

(epytext
  (docstring
    (para
      (text)))
  (docstring
    (para
      (tag
        (bold_tag
          (tag_content
            (tag_text))))))
  (docstring
    (para
      (text))))
