test/corpus/code.txt
==================
Code tag
==================

This is a C{code} text.

---

(epytext
  (docstring
    (para
      (text)
      (tag
        (code_tag
          (code_content)))
      (text)
      (paragraph_break
        (end_of_file)))))
